# Sol2D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.uQShDf  README.md  game.xml  game_rpg.xml  game_test.xml
games/defenitions/: sol2d.lua
games/definitions/: body.lua  contact.lua  layout.lua  mouse.lua  script.lua  sol2d.common.lua  sol2d.font.lua  sol2d.graphics.lua  sol2d.joint.lua  sol2d.keyboard.lua  sol2d.layout.lua  sol2d.lua  sol2d.scene.lua  sol2d.sound.lua  sol2d.store.lua  sol2d.tilemap.lua  sol2d.ui.lua  sol2d.view.lua  sol2d.window.lua  view.lua
games/rpg/: def.lua  main.lua  skeleton.lua
games/rpg/defenitions/: sol2d.lua
games/rpg/sounds/click/: SOURCE.txt
games/rpg/sounds/teleport/: SOURCE.txt
games/rpg/sounds/village_in_despair/: SOURCE.txt
games/rpg/tiled/img/dawn_of_the_gods/: SOURCE.txt
games/rpg/tiled/tmx/: level-01.tmx  test2.tmx
games/rpg/tiled/tsx/: level-01.tsx  level-03-cave.tsx  level-03-objects.tsx  numbers2.tsx  tree.tsx
games/side_scroller/resources/tilemaps/: level-01.tmx  level-02.tmx
games/side_scroller/scripts/: body-contact-observer.lua  button.lua  flying-platform-script.lua  game.lua  level-01.lua  level-02.lua  level-common.lua  level.lua  main.lua  platform-script.lua  platform.lua  player-script.lua  player.lua  resources.lua  state-machine.lua
games/side_scroller/scripts/bodies/: flying-platform.lua  player.lua
games/side_scroller/scripts/resources/: all.lua  button-factory.lua  flying-platform.lua  keys.lua  platform-factory.lua  player.lua  sounds.lua
games/test/: main.lua
src/: .clang-format
src/Sol2D/: AStar.cpp  AStar.h  Application.cpp  ApplicationContext.h  Area.cpp  Area.h  Body.cpp  Body.h  BodyDefinition.h  BodyOptions.h  BodyPhysicsDefinition.h  BodyPrototype.cpp  BodyPrototype.h  BodyShapeGraphic.h  BodyShapeGraphics.h  BodyShapeOptions.h  BodyShapePhysicsDefinition.h  BodyShapePrototype.cpp  BodyShapePrototype.h  BodyShapeType.h  BodyType.h  Box2D.cpp  Box2D.h  Box2dDebugDraw.cpp  Box2dDebugDraw.h  Canvas.cpp  Canvas.h  Color.h  Contact.h  Def.h  Dimension.h  Element.cpp  Element.h  Exception.h  Fragment.h  GraphicsPack.cpp  GraphicsPack.h  GraphicsPackDefinition.h  GraphicsRenderOptions.h  Larder.cpp  (+45 more)
src/Sol2D/Forms/: Button.cpp  Button.h  Common.h  Form.cpp  Form.h  Label.cpp  Label.h  Menu.cpp  Menu.h  TextAlignment.h  Widget.cpp  Widget.h  WidgetPadding.h  WidgetProperty.h  WidgetState.h
src/Sol2D/Layouting/: Element.cpp  Element.h  Layout.cpp  Layout.h  Node.cpp  Node.h  Style.h
src/Sol2D/Lua/: LuaAreaApi.cpp  LuaAreaApi.h  LuaAudioApi.cpp  LuaAudioApi.h  LuaAudioTrackApi.cpp  LuaAudioTrackApi.h  LuaAux.cpp  LuaAux.h  LuaBodyApi.cpp  LuaBodyApi.h  LuaBodyDefinitionApi.cpp  LuaBodyDefinitionApi.h  LuaBodyOptionsApi.cpp  LuaBodyOptionsApi.h  LuaBodyPhysicsDefinitionApi.cpp  LuaBodyPhysicsDefinitionApi.h  LuaBodyPrototypeApi.cpp  LuaBodyPrototypeApi.h  LuaBodyShapeApi.cpp  LuaBodyShapeApi.h  LuaBodyShapeOptionsApi.cpp  LuaBodyShapeOptionsApi.h  LuaBodyShapePhysicsDefinitionApi.cpp  LuaBodyShapePhysicsDefinitionApi.h  LuaBodyShapePrototypeApi.cpp  LuaBodyShapePrototypeApi.h  LuaBodyShapeTypeApi.cpp  LuaBodyShapeTypeApi.h  LuaBodyTypeApi.cpp  LuaBodyTypeApi.h  LuaColorApi.cpp  LuaColorApi.h  LuaContactApi.cpp  LuaContactApi.h  LuaDimensionApi.cpp  LuaDimensionApi.h  LuaFontApi.cpp  LuaFontApi.h  LuaFormApi.cpp  LuaFormApi.h  (+84 more)
src/Sol2D/Lua/Aux/: LuaCallbackStorage.cpp  LuaCallbackStorage.h  LuaCallbackSubscribable.h  LuaForward.h  LuaMetatable.cpp  LuaMetatable.h  LuaReferenceHolder.cpp  LuaReferenceHolder.h  LuaScript.cpp  LuaScript.h  LuaStrings.cpp  LuaStrings.h  LuaTable.cpp  LuaTable.h  LuaTableApi.cpp  LuaTableApi.h  LuaTopStackTable.cpp  LuaTopStackTable.h  LuaUserData.h  LuaUtils.cpp  LuaUtils.h  LuaWeakRegistryStorage.cpp  LuaWeakRegistryStorage.h
src/Sol2D/MediaLayer/: Capsule.cpp  Capsule.h  Color.h  LineRenderer.cpp  LineRenderer.h  Math.h  MediaLayer.h  Number.h  Primitive.h  Rect.h  RectRenderer.cpp  RectRenderer.h  Renderer.cpp  Renderer.h  RenderingContext.h  RenderingData.h  Rotation.h  SDLException.h  SDLPtr.h  Shader.cpp  Shader.h  Size.h  Texture.h  Transform.h  Types.h  UIRenderer.cpp  UIRenderer.h  Utils.cpp  Utils.h
src/Sol2D/Rendering/: RectRenderingData.h  Renderer.cpp  Renderer.h  SDLException.h
src/Sol2D/Rendering/Impl/: RectRenderingQueue.cpp  RectRenderingQueue.h  Renderer.cpp  Renderer.h  RenderingContext.h  Shader.cpp  Shader.h
src/Sol2D/SDL/: Mixer.h  SDL.cpp  SDL.h  TTF.h
src/Sol2D/Shaders/: Capsule.frag  Circle.frag  Circle.vert  Polyline.frag  Polyline.vert  Rectangle.frag  Rectangle.vert  Texture.frag  Texture.vert
src/Sol2D/Tiles/: ObjectHeap.cpp  ObjectHeap.h  Tile.h  TileHeap.cpp  TileHeap.h  TileMap.cpp  TileMap.h  TileMapImageLayer.h  TileMapLayer.cpp  TileMapLayer.h  TileMapLayerContainer.cpp  TileMapLayerContainer.h  TileMapObject.h  TileMapObjectLayer.h  TileMapTileLayer.cpp  TileMapTileLayer.h  TileSet.h  Tmx.cpp  Tmx.h
src/Sol2D/Utils/: Array.h  Base64.cpp  Base64.h  Color.cpp  Color.h  KeyValueStorage.h  Math.cpp  Math.h  ObjectStore.h  Observable.h  PreHashedMap.h  SequentialId.cpp  SequentialId.h  String.cpp  String.h  Unmap.h  Variant.h  Zlib.cpp  Zlib.h  Zstd.cpp  Zstd.h
src/Sol2D/World/: AStar.cpp  AStar.h  ActionQueue.h  Body.cpp  Body.h  BodyDefinition.h  BodyOptions.h  BodyPhysicsDefinition.h  BodyShape.cpp  BodyShape.h  BodyShapeGraphics.h  BodyShapePhysicsDefinition.h  BodyShapeType.h  BodyType.h  Box2dDebugDraw.cpp  Box2dDebugDraw.h  Contact.h  Joint.cpp  Joint.h  JointDefinition.h  Scene.cpp  Scene.h  UserData.h
src/Sol2D/Xml/: XmlException.h  XmlLoader.cpp  XmlLoader.h
workspace/: .luarc.json  main.lua  manifest.xml  player.lua
workspace/assets/player/: SOURCE.txt
workspace/assets/spaceship/: SOURCE.txt
workspace/defenitions/: sol2d.lua
workspace/tiled/img/emoji/: SOURCE.txt
workspace/tiled/img/magecity/: SOURCE.txt
workspace/tiled/tmx/: level-01.tmx  level-02.tmx  level-03.tmx  test.tmx  test2.tmx
workspace/tiled/tsx/: level-02.tsx  level-03-overworld.tsx  test.tsx
(+8 files in other folders)
